--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>React Weather App</title>
   </head>
   <body>
